little scrollbar adjustments, no cookies fix

--- a/editeur_de_texte/text_editor.css
+++ b/editeur_de_texte/text_editor.css
@@ -67,6 +67,18 @@
 	font-size: 24px;
 }
 
+#textOutput::-webkit-scrollbar-thumb {
+    background-color: #00000040;
+    border-radius: 10px;
+    border: 5px solid transparent;
+    background-clip: padding-box;
+}
+
+#textOutput::-webkit-scrollbar {
+    width: 20px;
+}
+
+/*---------------------------------------:*/
 
 .importantButton:hover {
     background-color: #e65d5d;
